--- a/fortunecookie.html
+++ b/fortunecookie.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="container">
-            <h3>Fortune Cookie</h3>
+            <h3>Fortune Cookie Time!</h3>
             <h1>🥠</h1>
             <p id="fortuneMessage">Click the cookie to get your fortune!</p>
             <button id="openCookie">Open Cookie</button>
